<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Tractament"
    android:background="@color/colorback">

    <ImageView
        android:id="@+id/imagenherida"
        android:layout_width="155dp"
        android:layout_height="120dp"
        android:src="@drawable/herida1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chuletilla" />

    <ImageButton
        android:id="@+id/boton_idioma2"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="74dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="@+id/titulo_tractament_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.88"
        app:layout_constraintStart_toEndOf="@+id/logo_main"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.48000002"
        app:srcCompat="@drawable/catalan" />

    <TextView
        android:id="@+id/titulo_tractament_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Tractament"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.391"
        app:layout_constraintStart_toEndOf="@+id/logo_main"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.088" />

    <ImageView
        android:id="@+id/logo_main"
        android:layout_width="85dp"
        android:layout_height="78dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/cura"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:text="@string/cura1"
        app:layout_constraintBottom_toTopOf="@+id/manteniment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_main"
        app:layout_constraintVertical_bias="0.946" />

    <TextView
        android:id="@+id/neteja"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:text="@string/neteja1"
        app:layout_constraintBottom_toTopOf="@+id/desbridament"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_main"
        app:layout_constraintVertical_bias="0.739" />

    <TextView
        android:id="@+id/control"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/control1"
        app:layout_constraintBottom_toTopOf="@+id/cura"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_main"
        app:layout_constraintVertical_bias="0.979" />

    <TextView
        android:id="@+id/desbridament"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:text="@string/desbridament1"
        app:layout_constraintBottom_toTopOf="@+id/control"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_main"
        app:layout_constraintVertical_bias="0.801" />

    <TextView
        android:id="@+id/titoltractament"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titoltractament1"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/neteja"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_main"
        app:layout_constraintVertical_bias="0.398" />

    <TextView
        android:id="@+id/aposits"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:text="@string/aposits1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_main"
        app:layout_constraintVertical_bias="0.703" />

    <TextView
        android:id="@+id/manteniment"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:text="@string/manteniment1"
        app:layout_constraintBottom_toTopOf="@+id/aposits"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_main"
        app:layout_constraintVertical_bias="0.958" />

    <TextView
        android:id="@+id/chuletilla"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:text="@string/chuletilla1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aposits"
        app:layout_constraintVertical_bias="0.07" />

</androidx.constraintlayout.widget.ConstraintLayout>