<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".llengua"
    android:background="@color/colorback">

    <ImageButton
        android:id="@+id/Boton_idioma"
        android:layout_width="74dp"
        android:layout_height="60dp"
        style="@style/Widget.AppCompat.Button.Borderless"
        app:layout_constraintBottom_toBottomOf="@+id/titulo_llengua_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.88"
        app:layout_constraintStart_toEndOf="@+id/logo_main"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.484"
        app:srcCompat="@drawable/catalan" />

    <TextView
        android:id="@+id/titulo_llengua_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Idioma"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.391"
        app:layout_constraintStart_toEndOf="@+id/logo_main"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.088" />

    <ImageView
        android:id="@+id/logo_main"
        android:layout_width="85dp"
        android:layout_height="78dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025"
        app:srcCompat="@drawable/logo" />

    <ImageButton
        android:id="@+id/boton_bandera_catalan"
        android:layout_width="74dp"
        android:layout_height="60dp"
        style="@style/Widget.AppCompat.Button.Borderless"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_main"
        app:layout_constraintVertical_bias="0.263"
        app:srcCompat="@drawable/catalan" />

    <ImageButton
        android:id="@+id/boton_bandera_castellano"
        android:layout_width="74dp"
        android:layout_height="60dp"
        style="@style/Widget.AppCompat.Button.Borderless"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boton_bandera_catalan"
        app:layout_constraintVertical_bias="0.119"
        app:srcCompat="@drawable/castellano" />

    <Button
        android:id="@+id/boton_catalan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Catala"
        style="@style/Widget.AppCompat.Button.Borderless"
        app:layout_constraintBottom_toBottomOf="@+id/boton_bandera_catalan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.231"
        app:layout_constraintStart_toEndOf="@+id/boton_bandera_catalan"
        app:layout_constraintTop_toTopOf="@+id/boton_bandera_catalan"
        app:layout_constraintVertical_bias="0.744" />

    <Button
        android:id="@+id/boton_castella"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Castella"
        style="@style/Widget.AppCompat.Button.Borderless"
        app:layout_constraintBottom_toBottomOf="@+id/boton_bandera_castellano"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.238"
        app:layout_constraintStart_toEndOf="@+id/boton_bandera_castellano"
        app:layout_constraintTop_toTopOf="@+id/boton_bandera_castellano"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>